@@ -1,3 +1,7 @@
+2003-08-04  Christian Stimming <stimming@tuhh.de>
+
+	* src/lib/ktoblzcheck.cc: Fix unparenthesed array initialization.
+
 2003-08-03  Christian Stimming  <stimming@tuhh.de>
 
 	* src/include/ktoblzcheck.h: Removed __gnu_cxx::hash_map since
